@@ -18,7 +18,7 @@ import org.springframework.web.cors.CorsConfiguration;
 import org.springframework.web.cors.CorsConfigurationSource;
 import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
 
-import java.util.Arrays;
+import java.util.List;
 
 @Configuration
 @EnableWebSecurity
@@ -27,23 +27,23 @@ public class WebSecurityConfig {
     private final UserService userService;
     private final AuthService authService;
     private final RedisTemplate<String, String> redisTemplate;
-//    private final AuthenticationEntryPoint entryPoint;
 
     @Bean
     CorsConfigurationSource corsConfigurationSource() {
         CorsConfiguration configuration = new CorsConfiguration();
-        configuration.setAllowedOrigins(Arrays.asList("http://localhost:5173", "http://localhost:5174", "https://pure-market-client.vercel.app"));
-        configuration.setAllowedMethods(Arrays.asList("GET", "POST", "PUT", "PATCH", "DELETE", "OPTIONS"));
+        configuration.setAllowedHeaders(List.of("*"));
+        configuration.setAllowedOrigins(List.of("http://localhost:5173", "http://localhost:5174", "https://pure-market-client.vercel.app"));
+        configuration.setAllowedMethods(List.of("GET", "POST", "PUT", "PATCH", "DELETE", "OPTIONS"));
         configuration.setAllowCredentials(true);
         UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
         source.registerCorsConfiguration("/**", configuration);
         return source;
     }
 
-    private static final String[] PERMIT_URL = {
-            "/api/v1/users/login", "/api/v1/users/signup", "/api/v1/users/nickname", "/api/v1/users/loginId",
-            "/api/v1/users/reissue-token", "/api-docs/**", "/swagger-ui/**", "/swagger-ui.html", "/swagger-resources/**"
-    };
+//    private static final String[] PERMIT_URL = {
+//            "/api/v1/users/login", "/api/v1/users/signup", "/api/v1/users/nickname", "/api/v1/users/loginId",
+//            "/api/v1/users/reissue-token", "/api-docs/**", "/swagger-ui/**", "/swagger-ui.html", "/swagger-resources/**"
+//    };
 
     @Bean
     protected SecurityFilterChain securityFilterChain(HttpSecurity httpSecurity) throws Exception {
@@ -53,15 +53,22 @@ public class WebSecurityConfig {
                 .sessionManagement((sessionManagement) ->
                         sessionManagement.sessionCreationPolicy(SessionCreationPolicy.STATELESS))
                 .authorizeHttpRequests((authorizeRequests) -> authorizeRequests
-                        .requestMatchers(PERMIT_URL).permitAll()
                         .requestMatchers(
+                                new AntPathRequestMatcher("/api/v1/users/login"),
+                                new AntPathRequestMatcher("/api/v1/users/signup"),
+                                new AntPathRequestMatcher("/api/v1/users/nickname"),
+                                new AntPathRequestMatcher("/api/v1/users/loginId"),
+                                new AntPathRequestMatcher("/api/v1/users/reissue-token"),
+                                new AntPathRequestMatcher("/api-docs/**"),
+                                new AntPathRequestMatcher("/swagger-ui/**"),
+                                new AntPathRequestMatcher("/swagger-ui.html"),
+                                new AntPathRequestMatcher("/swagger-resources/**"),
                                 new AntPathRequestMatcher("/api/v1/produce/**", "GET"),
                                 new AntPathRequestMatcher("/api/v1/giveaway/**", "GET"),
                                 new AntPathRequestMatcher("/api/v1/recipe/**", "GET"),
                                 new AntPathRequestMatcher("/api/v1/home", "GET")).permitAll()
                         .anyRequest().authenticated())
                 .addFilterBefore(new JwtAuthenticationFilter(authService, userService, redisTemplate), UsernamePasswordAuthenticationFilter.class)
-                //.exceptionHandling(handler -> handler.authenticationEntryPoint(entryPoint))
                 .build();
     }
 }
